add js(not working yet)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <h1>Hide my page!</h1>
-    <input type="text" id="keyInput" placeholder="Select a key">
-    <script src="main.js"></script>
+    <input type="text" id="keyInput" placeholder="Select a key" readonly>
+    <script src="popup.js"></script>
 </body>
 </html>
